<resources>
    <string name="app_name">Cafe</string>
    <string name="content_description_media">Veg items</string>
    <string name="title">Vegetarian items</string>
    <string name="action_1">View Items</string>
    <string name="title2">Non-veg items</string>
    <string name="foodTitle">Food Name</string>
    <string name="price">Rs. 150</string>
    <string name="foodName">Veg Bhaat Set</string>
    <string name="yourSelection">Your Selection</string>
    <string name="nonveg">Nonveg</string>
    <string name="drinks">Drinks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="veg">Veg items</string>
</resources>